tests/baselines/reference/assignmentStricterConstraints.errors.txt
tests/cases/compiler/assignmentStricterConstraints.ts(7,1): error TS2322: Type '<T, S extends T>(x: T, y: S) => void' is not assignable to type '<T, S>(x: T, y: S) => void'.
  Types of parameters 'y' and 'y' are incompatible.
    Type 'S' is not assignable to type 'T'.


==== tests/cases/compiler/assignmentStricterConstraints.ts (1 errors) ====
    var f = function <T, S extends T>(x: T, y: S): void {
        x = y
    }
    
    var g = function <T, S>(x: T, y: S): void { }
    
    g = f
    ~
!!! error TS2322: Type '<T, S extends T>(x: T, y: S) => void' is not assignable to type '<T, S>(x: T, y: S) => void'.
!!! error TS2322:   Types of parameters 'y' and 'y' are incompatible.
!!! error TS2322:     Type 'S' is not assignable to type 'T'.
    g(1, "")
    